--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -54,7 +54,18 @@ hr.solid{
     border-top:2px solid #bbb
 }
 
+hr.footer{
+    border-top:2px solid var(--secondary-color)
+}
+
 hr.rounded{
     border-top:8px solid #bbb;
     border-radius:5px
+}
+
+.footer{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    column-gap: 20px;
 }
