CHG. Edited styling for footer

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -29,13 +29,14 @@ body{
   transition:all .3s ease;
 
 }
-.nav-tabs li:hover{border-color:#007bff
+.nav-tabs li:hover{
+  border-color: var(--primary-color)
 }
 
 .text-light{
   text-decoration:underline;
   cursor:pointer;
-  color:#00f
+  color: var(--accent-color)
 }
 
 .filter-wrap{
@@ -47,7 +48,8 @@ body{
 
 }
 
-.filter-wrap select{font-size:.6rem
+.filter-wrap select{
+  font-size:.6rem
 }
 
 .task-wrap{
@@ -68,7 +70,8 @@ details{
   align-items:center;
   flex-wrap:nowrap;column-gap:1.5em;
   font-size:clamp(.5rem,1.5vw,2rem);
-  border:1px solid #fdb;
+  border:1px solid var(--secondary-color);
+  /* border:1px solid #fdb; */
   padding:10px 4px;
   box-shadow:1px 1px 2px #bbb;
 }
