CHG. Added routes

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -67,5 +67,6 @@ hr.rounded{
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
-    column-gap: 20px;
+    align-items: center;
+    flex-direction: column;
 }
